--- a/nfl_etl/dbt_project.yml
+++ b/nfl_etl/dbt_project.yml
@@ -24,14 +24,13 @@ clean-targets:         # directories to be removed by `dbt clean`
   - "dbt_packages"
 
 
-# Configuring models
-# Full documentation: https://docs.getdbt.com/docs/configuring-models
+# # Configuring models
+# # Full documentation: https://docs.getdbt.com/docs/configuring-models
 
-# In this example config, we tell dbt to build all models in the example/
-# directory as views. These settings can be overridden in the individual model
-# files using the `{{ config(...) }}` macro.
-models:
-  nfl_etl:
-    # Config indicated by + and applies to all files under models/example/
-    example:
-      +materialized: view
+# # In this example config, we tell dbt to build all models in the example/
+# # directory as views. These settings can be overridden in the individual model
+# # files using the `{{ config(...) }}` macro.
+# models:
+#   nfl_etl:
+#     # Config indicated by + and applies to all files under models/example/
+#       +materialized: view
